--- a/about.html
+++ b/about.html
@@ -222,7 +222,7 @@
             </div>
         </div>
         <div class="logo">
-            <img src="assests/Images/webclub.png" alt="">
+            <img src="assets/Images/webclub.png" alt="">
         </div>
     </div>
     <div class="vismis">
@@ -243,7 +243,7 @@
       </div>
       <div class="row">
         <div class="profile-card">
-            <img src="assests/Images/nidhya maam.jpeg" alt="Dr. R. Nidhya">
+            <img src="assets/Images/nidhya maam.jpeg" alt="Dr. R. Nidhya">
             <h2>Dr. R. Nidhya</h2>
             <p>Professor - CSE<br>MITS</p>
             <div class="links">
@@ -258,7 +258,7 @@
       </div>
       <div class="row">
     <div class="profile-card">
-        <img src="/assests/Images/HarshaRao.png" alt="HarshaVardhanRao">
+        <img src="/assets/Images/HarshaRao.png" alt="HarshaVardhanRao">
         <h2>V. Harshavardhan</h2>
         <p>III CSE - 22691A0571</p>
         <div class="links">
@@ -269,7 +269,7 @@
         </div>
       </div>
       <div class="profile-card">
-        <img src="/assests/Images/bava.png" alt="Profile Picture">
+        <img src="/assets/Images/bava.png" alt="Profile Picture">
         <h2>V. Mahesh Kumar</h2>
         <p>III CSE - 22691A05B5</p>
         <div class="links">
@@ -285,7 +285,7 @@
     <div class="row">
       
       <div class="profile-card">
-        <img src="assests/Images/Timmampalli.png" alt="Profile Picture">
+        <img src="assets/Images/Timmampalli.png" alt="Profile Picture">
         <h2>T. Meghana</h2>
         <p>III CSE - 22691A05C3</p>
         <div class="links">
@@ -297,7 +297,7 @@
         </div>
       </div>
       <div class="profile-card">
-        <img src="assests/Images/Rohith.png" alt="Profile Picture">
+        <img src="assets/Images/Rohith.png" alt="Profile Picture">
         <h2>E. Reddy Rohith</h2>
         <p>III CSE - 22691A05I1</p>
         <div class="links">
@@ -309,7 +309,7 @@
         </div>
       </div>
       <div class="profile-card">
-        <img src="assests/Images/Karthik.png" alt="Profile Picture">
+        <img src="assets/Images/Karthik.png" alt="Profile Picture">
         <h2>K. Naga Sai Karthik</h2>
         <p>III CSE - 22691A05E2</p>
         <div class="links">
@@ -321,7 +321,7 @@
       </div>
  
       <div class="profile-card">
-        <img src="assests/Images/Mutra.png" alt="Profile Picture">
+        <img src="assets/Images/Mutra.png" alt="Profile Picture">
         <h2>M. Jahnavi</h2>
         <p>III CSE - 22691A0583</p>
         <div class="links">
@@ -332,7 +332,7 @@
         </div>
       </div>
       <div class="profile-card">
-        <img src="assests/Images/sudhakar.png" alt="Profile Picture">
+        <img src="assets/Images/sudhakar.png" alt="Profile Picture">
         <h2>M. Keerthana Evanjilin</h2>
         <p>III CSE - 22691A0599</p>
         <div class="links">
@@ -344,7 +344,7 @@
         </div>
       </div>
       <div class="profile-card">
-        <img src="assests/Images/Keerthi.png" alt="Profile Picture">
+        <img src="assets/Images/Keerthi.png" alt="Profile Picture">
         <h2>C. Keerthi Padma Priya</h2>
         <p>III CSE - 22691A05A1</p>
         <div class="links">
@@ -357,7 +357,7 @@
         </div>
       </div>
       <div class="profile-card">
-        <img src="assests/Images/loki.png" alt="Profile Picture">
+        <img src="assets/Images/loki.png" alt="Profile Picture">
         <h2>P.G. Lokeshwari</h2>
         <p>III CSE - 22691A05B1</p>
         <div class="links">
