--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MITS WebClub</title>
-  <link rel="shortcut icon" href="" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/Images/webclub.png" type="image/x-icon">
   <style>
     body {
         margin: 0;
