--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Club</title>
     <link rel="shortcut icon" href="./assets/Images/webclub.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/CSS/nav.css">
     <link rel="stylesheet" href="./assets/CSS/footer.css">
     <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 <body>
-    
-    <!-- Footer -->
+
+    <!-- Nav & Footer -->
     <script src="./assets/JS/components.js" defer></script>
+    <!-- Script -->
+     <script src="./assets/JS/script.js" defer></script>
 </body>
 </html>
