Added main content section with hero and responsive design styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
     <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 <body>
+
+    <main>
+        <section class="hero">
+            <i><h1>MITS Web Club</h1></i>
+        </section>
     
+        <section class="content">
+            <div class="text">
+                <h2>Empowering Innovators,<br>
+                    Building the Future of<br>
+                    Web Development!</h2>
+                <p>Join the MITS Web Club to learn, build, and innovate in the world of web development. Explore projects, attend workshops, and collaborate with like-minded peers.</p>
+                <a href="#" class="join-btn">Join Us Now →</a>
+            </div>
+            <div class="image">
+                <div class="image-overlay"></div>
+                <img src="assets/Images/webclub.png" alt="Web Club">
+            </div>
+        </section>
+    </main>
     <!-- Nav & Footer -->
     <script src="./assets/JS/components.js" defer></script>
     <!-- Script -->
