--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/CSS/nav.css">
     <link rel="stylesheet" href="./assets/CSS/footer.css">
     <link rel="stylesheet" href="./assets/CSS/style.css">
+    <link rel="stylesheet" href="./assets/CSS/projects.css">
 </head>
 <body>
 
@@ -28,6 +29,52 @@
                 <div class="image-overlay"></div>
                 <img src="assets/Images/webclub.png" alt="Web Club">
             </div>
+        </section>
+
+        <section class="projects-section">
+            <div class="heading">
+                <h1>Our Projects</h1>
+                <h3>Showcasing Innovation</h3>
+            </div>
+            <div class="project-container">
+                <div class="project-cards" id="project-cards-container">
+                    <!-- Project Cards will be added here using JavaScript -->
+                </div>
+            </div>
+            <script id="project-data" type="application/json">
+                [
+                    {
+                        "image": "assets/Images/Projects/swagath.png",
+                        "alt": "Project 1",
+                        "title": "SWAGATH 2k24",
+                        "description": "An innovative web-based portal designed to streamline the registration and management of college cultural and technical fests. The platform offers event listings, ticket booking, and real-time updates for participants."
+                    },
+                    {
+                        "image": "assets/Images/Projects/innospark.png",
+                        "alt": "Project 2",
+                        "title": "INNOSPARK 1.0",
+                        "description": "A dynamic web platform that encourages students to showcase their creative ideas and projects. It includes features such as project submission, evaluation by mentors, and collaboration opportunities."
+                    },
+                    {
+                        "image": "assets/Images/Projects/flex.png",
+                        "alt": "Project 3",
+                        "title": "MITS FLEX",
+                        "description": "An advanced digital notice board system to enhance campus communication. It allows faculty and students to share important announcements, timetables, and updates via a responsive web interface."
+                    },
+                    {
+                        "image": "assets/Images/Projects/ashv_2k25.png",
+                        "alt": "Project 4",
+                        "title": "ASHV 2k25",
+                        "description": "A comprehensive web solution for managing the annual sports fest at MITS. It offers features such as athlete registration, event schedules, and live score updates."
+                    },
+                    {
+                        "image": "assets/Images/Projects/mits_foundation.png",
+                        "alt": "Project 5",
+                        "title": "MITS Foundation",
+                        "description": "A dedicated website to support MITS Foundation initiatives, featuring donation portals, success stories, and event highlights to encourage contributions and community engagement."
+                    }
+                ]
+            </script>
         </section>
     </main>
     <!-- Nav & Footer -->
