--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Club</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="shortcut icon" href="./assets/Images/webclub.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/CSS/nav.css">
     <link rel="stylesheet" href="./assets/CSS/footer.css">
@@ -76,6 +77,8 @@
                 ]
             </script>
         </section>
+
+
     </main>
     <!-- Nav & Footer -->
     <script src="./assets/JS/components.js" defer></script>
