--- a/about.html
+++ b/about.html
@@ -6,11 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MITS WebClub</title>
   <link rel="shortcut icon" href="assets/Images/webclub.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
+
     main {
       background: #1F1F3B;
       padding: 40px 20px;
@@ -222,7 +226,7 @@
             </div>
         </div>
         <div class="logo">
-            <img src="assets/Images/webclub.png" alt="">
+            <img src="./assets/Images/webclub.png" alt="Club Logo">
         </div>
     </div>
     <div class="vismis">
