--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 
     <main>
+        <img src="assets/Images/bg_pattern.png" alt="" class="bg-pattern">
         <section class="hero">
             <i><h1>MITS Web Club</h1></i>
         </section>
@@ -36,10 +37,7 @@
                 <h1>Our Projects</h1>
                 <h3>Showcasing Innovation</h3>
             </div>
-            <div class="project-container">
-                <div class="project-cards" id="project-cards-container">
-                    <!-- Project Cards will be added here using JavaScript -->
-                </div>
+            <div class="project-container" id="project-container">
             </div>
             <script id="project-data" type="application/json">
                 [
