Rohith anna chesaa

--- a/index.html
+++ b/index.html
@@ -113,6 +113,31 @@
             </script>
         </section>
 
+        <section class="events-section">
+            <div class="he">
+                <h1>Events & Workshops</h1>
+                <h4>Learn, Build, Innovate</h4>
+            </div>
+            <div class="lis">
+                <h3>Gmocs 2k23 Web Development Workshop</h3>
+                <hr>
+                <h3>27th June 2024 Orientation on Full Stack Development</h3>
+                <hr>
+                <h3>Gmocs 2k23 Web Development Workshop</h3>
+                <hr>
+                <h3>27th June 2024 Orientation on Full Stack Development</h3>
+                <hr>
+                <h3>Gmocs 2k23 Web Development Workshop</h3>
+                <hr>
+                <h3>27th June 2024 Orientation on Full Stack Development</h3>
+                <hr>
+                <h3>Gmocs 2k23 Web Development Workshop</h3>
+                <hr>
+                <h3>27th June 2024 Orientation on Full Stack Development</h3>
+            </div>
+            <div class="b"><button>View Reports</button> </div>
+        </section>
+
 
     </main>
     <!-- Nav & Footer -->
