Enhanced event section

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Club</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/Images/webclub.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/CSS/nav.css">
     <link rel="stylesheet" href="./assets/CSS/footer.css">
     <link rel="stylesheet" href="./assets/CSS/style.css">
     <link rel="stylesheet" href="./assets/CSS/projects.css">
     <link rel="stylesheet" href="./assets/CSS/memories.css">
+    <link rel="stylesheet" href="./assets/CSS/events.css">
 </head>
 <body>
 
@@ -26,7 +28,7 @@
                     Building the Future of<br>
                     Web Development!</h2>
                 <p>Join the MITS Web Club to learn, build, and innovate in the world of web development. Explore projects, attend workshops, and collaborate with like-minded peers.</p>
-                <a href="#" class="join-btn">Join Us Now →</a>
+                <a href="#" class="join-btn">Join Us Now<i class="material-icons">arrow_forward</i></a>
             </div>
             <div class="image">
                 <div class="image-overlay"></div>
@@ -114,28 +116,28 @@
         </section>
 
         <section class="events-section">
-            <div class="he">
+            <div class="heading">
                 <h1>Events & Workshops</h1>
-                <h4>Learn, Build, Innovate</h4>
+                <h3>Learn, Build, Innovate</h3>
             </div>
-            <div class="lis">
-                <h3>Gmocs 2k23 Web Development Workshop</h3>
+            <div class="events-list" id="events-list">
+                <h4>Gmocs 2k23 Web Development Workshop</h4>
                 <hr>
-                <h3>27th June 2024 Orientation on Full Stack Development</h3>
+                <h4>27th June 2024 Orientation on Full Stack Development</h4>
                 <hr>
-                <h3>Gmocs 2k23 Web Development Workshop</h3>
+                <h4>Gmocs 2k23 Web Development Workshop</h4>
                 <hr>
-                <h3>27th June 2024 Orientation on Full Stack Development</h3>
+                <h4>27th June 2024 Orientation on Full Stack Development</h4>
                 <hr>
-                <h3>Gmocs 2k23 Web Development Workshop</h3>
+                <h4>Gmocs 2k23 Web Development Workshop</h4>
                 <hr>
-                <h3>27th June 2024 Orientation on Full Stack Development</h3>
+                <h4>27th June 2024 Orientation on Full Stack Development</h4>
                 <hr>
-                <h3>Gmocs 2k23 Web Development Workshop</h3>
+                <h4>Gmocs 2k23 Web Development Workshop</h4>
                 <hr>
-                <h3>27th June 2024 Orientation on Full Stack Development</h3>
+                <h4>27th June 2024 Orientation on Full Stack Development</h4>
             </div>
-            <div class="b"><button>View Reports</button> </div>
+            <a href="#" class="reports-btn">View Reports</a>
         </section>
 
 
