Add responsive hamburger menu and improve navbar styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Club</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/Images/webclub.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/CSS/nav.css">
     <link rel="stylesheet" href="./assets/CSS/footer.css">
@@ -29,7 +28,7 @@
                     Building the Future of<br>
                     Web Development!</h2>
                 <p>Join the MITS Web Club to learn, build, and innovate in the world of web development. Explore projects, attend workshops, and collaborate with like-minded peers.</p>
-                <a href="#" class="join-btn">Join Us Now<i class="material-icons">arrow_forward</i></a>
+                <a href="#" class="join-btn">Join Us Now<i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="image">
                 <div class="image-overlay"></div>
