--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
 
     <main>
-        <img src="assets/Images/bg_pattern.png" alt="" class="bg-pattern">
-        <section class="hero">
+        <img src="assets/Images/bg_pattern.png" alt="bg-pattern" class="bg-pattern">
+        <section class="hero" id="Home">
             <i><h1>MITS Web Club</h1></i>
         </section>
     
@@ -36,7 +36,7 @@
             </div>
         </section>
 
-        <section class="memories">
+        <section class="memories" id="Memories">
             <div class="heading">
                 <h1>Memories</h1>
                 <h3>Capturing our Journey</h3>
@@ -68,7 +68,7 @@
             <div class="dots-container" id="dots-container"></div>
         </section>
 
-        <section class="projects-section">
+        <section class="projects-section" id="Projects">
             <div class="heading">
                 <h1>Our Projects</h1>
                 <h3>Showcasing Innovation</h3>
@@ -82,39 +82,43 @@
                 [
                 {
                     "image": "assets/Images/Projects/ashv_2k25.png",
-                    "alt": "Project 4",
+                    "alt": "ASHV-2k25",
                     "title": "ASHV 2k25",
-                    "description": "A comprehensive web solution for managing the annual sports fest at MITS. It offers features such as athlete registration, event schedules, and live score updates."
+                    "description": "A comprehensive web solution for managing the annual sports fest at MITS. It offers features such as athlete registration, event schedules, and live score updates.",
+                    "link":"https://ashv2k.in/"
                 },
                 {
                     "image": "assets/Images/Projects/mits_foundation.png",
-                    "alt": "Project 5",
+                    "alt": "Foundation",
                     "title": "MITS Foundation",
-                    "description": "A dedicated website to support MITS Foundation initiatives, featuring donation portals, success stories, and event highlights to encourage contributions and community engagement."
+                    "description": "A dedicated website to support MITS Foundation initiatives, featuring donation portals, success stories, and event highlights to encourage contributions and community engagement.",
+                    "link":"https://mits-foundation.netlify.app/"
                 },
                 {
                     "image": "assets/Images/Projects/flex.png",
-                    "alt": "Project 3",
+                    "alt": "FLEX",
                     "title": "MITS FLEX",
                     "description": "An advanced digital notice board system to enhance campus communication. It allows faculty and students to share important announcements, timetables, and updates via a responsive web interface."
                 },
                 {
                     "image": "assets/Images/Projects/swagath.png",
-                    "alt": "Project 1",
+                    "alt": "SWAGATH",
                     "title": "SWAGATH 2k24",
-                    "description": "An innovative web-based portal designed to streamline the registration and management of college cultural and technical fests. The platform offers event listings, ticket booking, and real-time updates for participants."
+                    "description": "An innovative web-based portal designed to streamline the registration and management of college cultural and technical fests. The platform offers event listings, ticket booking, and real-time updates for participants.",
+                    "link":"https://swagath-2k24.netlify.app/"
                 },
                 {
                     "image": "assets/Images/Projects/innospark.png",
-                    "alt": "Project 2",
+                    "alt": "INNOSPARK",
                     "title": "INNOSPARK 1.0",
-                    "description": "A dynamic web platform that encourages students to showcase their creative ideas and projects. It includes features such as project submission, evaluation by mentors, and collaboration opportunities."
+                    "description": "A dynamic web platform that encourages students to showcase their creative ideas and projects. It includes features such as project submission, evaluation by mentors, and collaboration opportunities.",
+                    "link":"https://innospark-2024.netlify.app/"
                 }
                 ]
             </script>
         </section>
 
-        <section class="events-section">
+        <section class="events-section" id="Events">
             <div class="heading">
                 <h1>Events & Workshops</h1>
                 <h3>Learn, Build, Innovate</h3>
@@ -139,7 +143,7 @@
             <a href="#" class="reports-btn">View Reports</a>
         </section>
 
-        <section class="testimonials">
+        <section class="testimonials" id="Testimonials">
             <div class="heading">
                 <h1>Testimonials</h1>
                 <h2>Hear from Our Members</h2>
