--- a/about.html
+++ b/about.html
@@ -6,13 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MITS WebClub</title>
   <link rel="shortcut icon" href="assets/Images/webclub.png" type="image/x-icon">
+  <link rel="stylesheet" href="assets/CSS/nav.css">
+  <link rel="stylesheet" href="assets/CSS/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
   <style>
     body {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background: #1F1F3B;
     }
 
     main {
@@ -31,13 +35,73 @@
       color: #F0A028;
       margin-bottom: 10px;
     }
-    .coord{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10rem;
 
+    .aboutsec {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 85px;
+      margin: 10%;
+      flex-wrap: wrap;
     }
+
+    .abouts h2 {
+      font-family: Roboto Serif;
+      color: #F0A028;
+      margin-bottom: 10px;
+    }
+
+    .abouts p {
+      font-family: Roboto Serif;
+      color: #fff;
+      text-align: justify;
+    }
+
+    .logo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: auto;
+      max-width: 200px;
+    }
+
+    .logo img {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+      border-radius: 50%;
+    }
+
+    .vismis {
+      margin: 7%;
+      display: flex;
+      flex-direction: column;
+      background-color: #5D5D71;
+      justify-content: space-evenly;
+      padding: 1%;
+      min-height: 65vh;
+    }
+
+    .vismis h2 {
+      font-family: Roboto Serif;
+      color: #F0A028;
+    }
+
+    .vismis p {
+      margin: 0 5%;
+      font-family: Roboto Serif;
+      color: #fff;
+      text-align: justify;
+    }
+
+    .coord {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10rem;
+      flex-wrap: wrap;
+    }
+
     .row {
       display: flex;
       flex-wrap: wrap;
@@ -53,6 +117,7 @@
       min-width: 230px;
       text-align: center;
       padding: 20px 0 10px 0;
+      z-index: 1;
     }
 
     .profile-card img {
@@ -61,7 +126,6 @@
       height: 100px;
       object-fit: cover;
       margin-bottom: 5px;
-      /* border: 2px solid #003366; */
     }
 
     .profile-card h2 {
@@ -71,7 +135,7 @@
 
     .profile-card p {
       font-size: 14px;
-      color: #000;
+      color: #333;
       margin: 5px 0 15px;
     }
 
@@ -100,112 +164,25 @@
       background-color: #F0A028;
       opacity: 0.9;
     }
-    .aboutsec{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 85px;
-        margin: 10%;
-    }
-    .abouts h2{
-        font-family: Roboto Serif;
-        text-align: left;
-        text-underline-position: from-font;
-        text-decoration-skip-ink: none;
-        color:#F0A028;
-
-    }
-    .abouts p{
-        font-family: Roboto Serif;
-        text-align: justify;
-        text-underline-position: from-font;
-        text-decoration-skip-ink: none;
-        color:#fff;
-
-        
-    }
-    .vismis{
-        margin: 7%;
-        display: flex;
-        flex-direction: column;
-        background-color: #5D5D71;
-        justify-content: space-evenly;
-        padding: 1%;
-        min-height: 65vh;
-    }
-    .vismis h2{
-        font-family: Roboto Serif;
-        color:#F0A028;
-    }
-    .vismis p{
-        margin: 0 5%;
-        font-family: Roboto Serif;
-        color:#fff;
-        text-align: justify;
-    }
-    /* Mobile Menu */
-
-		@media (max-width: 768px) {
-			nav {
-        	position: absolute;
-        	top: 0;
-        	right: 0;
-        	width: 100%;
-        	height: auto;
-        	z-index: 10 !important;
-        	padding: 2rem;
-        	transition: all 0.3s ease-in-out;
-        	transform: translateY(-100%);
-        	background: linear-gradient(#003366, #0033669f);
-        	box-shadow: 0 0 10px 10px #0033669f;
-    	}
-
-      .ashv-hamburger {
-        display: none;
-        cursor: pointer;
-        z-index: 10;
-      }
-
-      nav.active {
-        display: block;
-        transform: translateY(0);
-      }
-
-			.ashv-hamburger {
-				display: block;
-				top: 1rem;
-				right: 1rem;
-				font-size: 2rem;
-				color: #F0A028;
-			}
-
-			nav ul {
-				flex-direction: column;
-				width: 100%;
-				padding: 0;
-			}
-
-      nav ul li {
-        width: 100%;
-        text-align: center;
-        padding: 1rem;
-      }
-
-      .event-hover ul {
-        display: none;
-      }
-
-      .event-hover:hover ul {
-        display: block;
-      }
-    }
 
     @media (max-width: 600px) {
+      .aboutsec {
+        flex-direction: column;
+        gap: 20px;
+        margin: 5%;
+      }
+
+      .coord {
+        flex-direction: column;
+        gap: 20px;
+      }
+
       .profile-card {
         min-width: 180px;
       }
     }
   </style>
+
 </head>
 
 <body>
@@ -226,7 +203,7 @@
             </div>
         </div>
         <div class="logo">
-            <img src="./assets/Images/webclub.png" alt="Club Logo">
+            <img src="assets/Images/webclub.png" alt="Club Logo">
         </div>
     </div>
     <div class="vismis">
@@ -262,7 +239,7 @@
       </div>
       <div class="row">
     <div class="profile-card">
-        <img src="/assets/Images/HarshaRao.png" alt="HarshaVardhanRao">
+        <img src="assets/Images/HarshaRao.png" alt="HarshaVardhanRao">
         <h2>V. Harshavardhan</h2>
         <p>III CSE - 22691A0571</p>
         <div class="links">
@@ -273,7 +250,7 @@
         </div>
       </div>
       <div class="profile-card">
-        <img src="/assets/Images/bava.png" alt="Profile Picture">
+        <img src="assets/Images/bava.png" alt="Profile Picture">
         <h2>V. Mahesh Kumar</h2>
         <p>III CSE - 22691A05B5</p>
         <div class="links">
@@ -287,43 +264,7 @@
       <h1>Mentors</h1>
     </div>
     <div class="row">
-      
-      <div class="profile-card">
-        <img src="assets/Images/Timmampalli.png" alt="Profile Picture">
-        <h2>T. Meghana</h2>
-        <p>III CSE - 22691A05C3</p>
-        <div class="links">
-          <a href="https://www.linkedin.com/in/meghana-timmampalli-21abb8272?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BMTRk4FfXQ9%2BJO%2Fi8tvYJKA%3D%3D"
-            target="_blank"><i class="fab fa-linkedin-in"></i></a>
-          <a href="https://github.com/Meghana3015" target="_blank" class="github"><i class="fab fa-github"></i></a>
-          <a href="https://www.behance.net/meghanatimmamp" target="_blank" class="portfolio"><i
-              class="fas fa-link"></i></a>
-        </div>
-      </div>
-      <div class="profile-card">
-        <img src="assets/Images/Rohith.png" alt="Profile Picture">
-        <h2>E. Reddy Rohith</h2>
-        <p>III CSE - 22691A05I1</p>
-        <div class="links">
-          <a href="https://www.linkedin.com/in/reddy-rohith-enduluri-656000273/" target="_blank"><i
-              class="fab fa-linkedin-in"></i></a>
-          <a href="https://github.com/ReddyRohith-E" target="_blank" class="github"><i class="fab fa-github"></i></a>
-          <a href="https://rohith-pavilion.netlify.app" target="_blank" class="portfolio"><i
-              class="fas fa-link"></i></a>
-        </div>
-      </div>
-      <div class="profile-card">
-        <img src="assets/Images/Karthik.png" alt="Profile Picture">
-        <h2>K. Naga Sai Karthik</h2>
-        <p>III CSE - 22691A05E2</p>
-        <div class="links">
-          <a href="https://www.linkedin.com/in/nagasai-karthik-kanakagiri-91a221254"><i
-              class="fab fa-linkedin-in"></i></a>
-          <a href="https://github.com/Karthik70904" target="_blank" class="github"><i class="fab fa-github"></i></a>
-          <a href="https://kns-blogs.netlify.app" target="_blank" class="portfolio"><i class="fas fa-link"></i></a>
-        </div>
-      </div>
- 
+
       <div class="profile-card">
         <img src="assets/Images/Mutra.png" alt="Profile Picture">
         <h2>M. Jahnavi</h2>
@@ -371,12 +312,46 @@
           <a href="#" target="_blank" class="portfolio"><i class="fas fa-link"></i></a>
         </div>
       </div>
-
+      <div class="profile-card">
+        <img src="assets/Images/Timmampalli.png" alt="Profile Picture">
+        <h2>T. Meghana</h2>
+        <p>III CSE - 22691A05C3</p>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/meghana-timmampalli-21abb8272?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BMTRk4FfXQ9%2BJO%2Fi8tvYJKA%3D%3D"
+            target="_blank"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://github.com/Meghana3015" target="_blank" class="github"><i class="fab fa-github"></i></a>
+          <a href="https://www.behance.net/meghanatimmamp" target="_blank" class="portfolio"><i
+              class="fas fa-link"></i></a>
+        </div>
+      </div>
+      <div class="profile-card">
+        <img src="assets/Images/Karthik.png" alt="Profile Picture">
+        <h2>K. Naga Sai Karthik</h2>
+        <p>III CSE - 22691A05E2</p>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/nagasai-karthik-kanakagiri-91a221254"><i
+              class="fab fa-linkedin-in"></i></a>
+          <a href="https://github.com/Karthik70904" target="_blank" class="github"><i class="fab fa-github"></i></a>
+          <a href="https://kns-blogs.netlify.app" target="_blank" class="portfolio"><i class="fas fa-link"></i></a>
+        </div>
+      </div>
+      <div class="profile-card">
+        <img src="assets/Images/Rohith.png" alt="Profile Picture">
+        <h2>E. Reddy Rohith</h2>
+        <p>III CSE - 22691A05I1</p>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/reddy-rohith-enduluri-656000273/" target="_blank"><i
+              class="fab fa-linkedin-in"></i></a>
+          <a href="https://github.com/ReddyRohith-E" target="_blank" class="github"><i class="fab fa-github"></i></a>
+          <a href="https://rohith-pavilion.netlify.app" target="_blank" class="portfolio"><i
+              class="fas fa-link"></i></a>
+        </div>
+      </div>
     </div>
     </div>
   </main>
 
-
+  <script src="assets/JS/components.js" defer></script>
 </body>
 
 </html>
