--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <main>
         <img src="assets/Images/bg_pattern.png" alt="bg-pattern" class="bg-pattern">
-        <section class="hero" id="Home">
+        <section class="hero">
             <i><h1>MITS Web Club</h1></i>
         </section>
     
